--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "lucide-react": "^0.292.0",
     "moment": "^2.29.4",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "next": "14.0.1",
     "prettier": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "svix": "^1.14.0",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
   },
