server components moved to specialised backend

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,25 @@
 {
   "extends": [
-    "next/core-web-vitals",
     "standard",
+    "plugin:react/recommended",
     "plugin:tailwindcss/recommended",
     "prettier"
-  ]
+  ],
+  "rules": {
+    "max-len": [2, 250],
+    "no-multiple-empty-lines": [
+      "error",
+      {
+        "max": 1,
+        "maxEOF": 1
+      }
+    ],
+    "object-curly-newline": 0,
+    "tailwindcss/no-custom-classname": [
+      "error",
+      {
+        "whitelist": ["text-light-500"]
+      }
+    ]
+  }
 }
