--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tinymce/tinymce-react": "^4.3.1",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
@@ -27,9 +28,9 @@
     "html-react-parser": "^5.0.6",
     "lucide-react": "^0.292.0",
     "moment": "^2.29.4",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
-    "next": "14.0.1",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.3",
+    "next": "^14.0.3",
     "prettier": "^3.0.3",
     "prismjs": "^1.29.0",
     "react": "^18",
