--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tinymce/tinymce-react": "^4.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -25,6 +26,7 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "framer-motion": "^10.16.5",
     "html-react-parser": "^5.0.6",
+    "html-to-text": "^9.0.5",
     "lucide-react": "^0.292.0",
     "moment": "^2.29.4",
     "mongodb": "^6.3.0",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^20",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
