added toast metadata heatmap

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tinymce/tinymce-react": "^4.3.1",
+    "@uiw/react-heat-map": "^2.2.1",
+    "@uiw/react-tooltip": "^4.22.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
