--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
@@ -31,6 +32,7 @@
     "framer-motion": "^10.16.5",
     "html-react-parser": "^5.0.6",
     "html-to-text": "^9.0.5",
+    "linkedin-jobs-api": "^1.0.1",
     "lucide-react": "^0.292.0",
     "moment": "^2.29.4",
     "mongodb": "^6.3.0",
